[tool.poetry]
name = "llm-compiler-demo"
version = "0.1.0"
description = "LLMCompiler demo for project scaffolding"
authors = ["Workshop Demo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.25"
langgraph = "^0.4.3"
langchain-openai = "^0.2.14"
openai = "^1.68.2"
pydantic = "^2.11.4"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
